<resources>
    <string name="app_name">Antoine Heitzmann</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Antoine Heitzmann</string>
    <string name="nav_header_subtitle">antoine.heitzmann@edu.univ-fcomte.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="camera">Camera</string>
    <string name="data">Data</string>
    <string name="map">Map</string>
    <string name="credits">Credits</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Bienvenue sur la page d\'accueil !</string>
    <string name="credit_content">Bienvenue sur la page de crédit !</string>
    <string name="map_content">Bienvenue sur la carte !</string>
    <string name="data_content">Bienvenue sur la page de données !</string>
    <string name="camera_content">Bienvenue sur l\'appareil photo !</string>
</resources>
